# jatsreader

./: install.sh
assets/: 256071.epub  9123624.epub  BibliaJerusalen_processed.epub  Quijote_epub  SagradaBiblia_2.epub  childrens-literature4_epub  childrens-literature5.epub  childrens-literature6.epub  childrens-literature7.epub  pnas.202202536.epub  pnas.202202536_jats.epub
assets/anai/EPUB/: anai.xml  content.opf  nav.xhtml  toc.ncx
assets/promocion/EPUB/: content.opf  nav.xhtml  promocion.xml  promocion_draft.xml  toc.ncx
src/authallocator/: Cargo.toml
src/authallocator/src/: lib.rs  lib_no_std.rs  lib_std.rs
src/authcomp/: Cargo.toml
src/authcomp/src/: computation.rs  error.rs  globals.rs  hashvisitor.rs  lib.rs  no_proofs.rs  prover.rs  verifier.rs
src/authdoc/: Cargo.toml
src/authdoc/src/: format.rs  lib.rs  node.rs  string.rs
src/authmacro/: Cargo.toml
src/authmacro/src/: lib.rs
src/authparser/: Cargo.toml
src/authparser/src/: html.lalrpop  html.rs  jats.lalrpop  jats.rs  lexer.rs  lib.rs  xml.lalrpop  xml.rs
src/authselect/: Cargo.toml
src/authselect/src/: cfi.rs  cfiparser.lalrpop  element.rs  lexer.rs  lib.rs  locator.rs  range.rs  types.rs
src/authselect_html5ever/: Cargo.toml
src/authselect_html5ever/src/: element.rs  lib.rs  selector.rs
src/authselect_std/: Cargo.toml
src/authselect_std/src/: element.rs  lib.rs  selector.rs
src/epubcontract/: Cargo.toml  build.rs  package.json
src/epubcontract/src/: api.rs  epubarchive.rs  epubdoc.rs  epubparser.rs  lib.rs  wasm_api.rs
src/epubcontract/src/authpub/: error.rs  mediaoverlay.rs  metadata.rs  mod.rs  publication.rs  types.rs
src/epubcontract/src/epub/: container.rs  mod.rs  ncx.rs  opf.rs
src/epubcontract/src/publication/: mediaoverlay.rs  metadata.rs  mod.rs  publication.rs
src/epubcontract/test/: exec.js  test.js
src/epubconverter/: requirements.txt
src/epubconverter/src/: app.py  htmltokenizer.py
src/slight/: Cargo.toml  run.sh  supervisor.sh
src/slight/component-template/main/: Cargo.toml  slightfile.toml
src/slight/component-template/main/src/: lib.rs  main.rs
src/slight/component-template/test/: Cargo.toml
src/slight/component-template/test/src/: main.rs
src/slight/locate/main/: Cargo.toml  slightfile.toml
src/slight/locate/main/src/: lib.rs  main.rs  types.rs
src/slight/locate/test/: Cargo.toml
src/slight/locate/test/src/: main.rs
src/slight/locateverifier/main/: Cargo.toml  slightfile.toml
src/slight/locateverifier/main/src/: lib.rs  main.rs  types.rs
src/slight/locateverifier/test/: Cargo.toml
src/slight/locateverifier/test/src/: main.rs
src/slight/manifest/main/: Cargo.toml  slightfile.toml
src/slight/manifest/main/src/: lib.rs  main.rs  types.rs
src/slight/manifest/test/: Cargo.toml  slightfile.toml
src/slight/manifestverifier/main/: Cargo.toml  slightfile.toml
src/slight/manifestverifier/main/src/: lib.rs  main.rs  types.rs
src/slight/manifestverifier/test/: Cargo.toml
src/slight/manifestverifier/test/src/: main.rs
src/slight/metadata/main/: Cargo.toml  slightfile.toml
src/slight/metadata/main/src/: lib.rs  main.rs  types.rs
src/slight/metadataverifier/main/: Cargo.toml  slightfile.toml
src/slight/metadataverifier/main/src/: lib.rs  main.rs  types.rs
src/slight/newtemplate/: Cargo.toml
src/slight/newtemplate/src/: main.rs
src/slight/register/main/: Cargo.toml  slightfile.toml
src/slight/register/main/src/: lib.rs  main.rs  types.rs
src/slight/register/test/: Cargo.toml  slightfile.toml
src/slight/register/test/src/: main.rs
src/slight/resolver-rest-api/: Cargo.toml  slightfile.toml
src/slight/resolver-rest-api/src/: lib.rs
src/slight/resolver/main/: Cargo.toml  slightfile.toml
src/slight/resolver/main/src/: lib.rs  main.rs  types.rs
src/slight/resolver/test/: Cargo.toml
src/slight/resolver/test/src/: main.rs
src/slight/resource/main/: Cargo.toml  slightfile.toml
src/slight/resource/main/src/: lib.rs  main.rs  types.rs
src/slight/resource/test/: Cargo.toml
src/slight/resource/test/src/: main.rs
src/slight/resourceverifier/main/: Cargo.toml  slightfile.toml
src/slight/resourceverifier/main/src/: lib.rs  main.rs  types.rs
src/slight/resourceverifier/test/: Cargo.toml
src/slight/resourceverifier/test/src/: main.rs
src/slight/storage/main/: Cargo.toml  slightfile.toml  slightfile2.toml
src/slight/storage/main/src/: lib.rs  main.rs  types.rs
src/slight/storage/test/: Cargo.toml  slightfile.toml
src/slight/storage/test/src/: main.rs
src/slight/streamer/: Cargo.toml  slightfile.toml
src/slight/streamer/src/: lib.rs  policy.rs
src/slight/streamer/static/reader/: index.html  lens.js  prelude.js
src/slight/streamer/static/services/: add.html  addstorage.html
src/wasmflow/: build.sh  clean.sh
src/wasmflow/hex/: Cargo.toml  interface.json
src/wasmflow/locator/: Cargo.toml  interface.json
src/wasmflow/locatorverifier/: Cargo.toml  (+1 more)
src/wasmflow/manifest/: Cargo.toml  interface.json
src/wasmflow/manifest/schemas/: manifest.apex
src/wasmflow/manifest/src/: components.rs  error.rs  lib.rs
src/wasmflow/manifest/src/components/: manifest.rs
src/wasmflow/rsstreamer/: Cargo.toml
src/wasmflow/rsstreamer/src/: main.rs  rpc.rs
src/wasmflow/rsstreamer/static/: register_url_handler.js
src/wasmflow/storage/: Cargo.toml  Makefile  interface.json
src/wasmflow/storage/makefiles/: Makefile.stateful-wasm
src/wasmflow/storage/schemas/: get.apex  put.apex
src/wasmflow/storage/src/: components.rs  main.rs
src/wasmflow/storage/src/components/: __batch__.rs  get.rs  put.rs
src/wasmflow/testjats/: Cargo.toml
src/wasmflow/testjats/schemas/: JATS-archivearticle1-3.xsd
src/wasmflow/testjats/src/: authmemstorage.rs  authstorage.rs  lib.rs
src/wasmflow/testjats/src/merkletreestorage/: bitcaskdb.rs  bitcasktree.rs  index.rs  merkletreestorage.rs  mod.rs  sleddb.rs  sledtree.rs  transaction.rs
src/wasmflow/testmemory/: Cargo.toml
src/wasmflow/testmemory/src/: main.rs
src/wasmflow/testmemorywasm32/: Cargo.toml
src/wasmflow/testmemorywasm32/src/: lib.rs
(+50 files in other folders)
