[package]
name = "authcomp"
version = "0.2.0"
authors = ["jredrado <jesus.redrado@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib","lib"]

[dependencies]


sha3 = {version="0.9.1" }
serde = { version = "1.0", features = ["derive"] }

corepack = { version = "~0.4.1" }

minicbor = {git='https://github.com/jredrado/minicbor.git', branch="master", version="0.11.1", default-features = false, features = ["std","derive"]}

nanoserde = {version="0.1.29", git="https://github.com/jredrado/nanoserde.git",branch="master",features=["std"]}

