[package]
name = "authmacro"
version = "0.2.0"
authors = ["jredrado <jesus.redrado@gmail.com>"]
edition = "2021"

[lib]

proc-macro = true

[dependencies]

syn = { version="1.0.44", features = ["full","visit-mut","extra-traits"] }
quote = "1.0"
proc-macro2 = {version = "1.0"}

uuid = {version="0.8.1", features = ["v4"]}
