[package]
name = "authparser"
version = "0.2.0"
authors = ["jredrado <jesus.redrado@gmail.com>"]
edition = "2021"


[lib]
crate-type = ["cdylib","lib"]


[dependencies]
lalrpop-util = {git ="https://github.com/lalrpop/lalrpop.git", tag="0.20.0", default-features=false }
logos = {version="0.12.0", features=["export_derive"], default-features=false}
smallvec = {version="1.6.1", default-features=false}

indextree = {git ="https://github.com/jredrado/indextree.git", branch="master", default-features=false, features=["std","deser"]}

authcomp = { path = "../authcomp", version= "0.2.0"}
authdoc = { path = "../authdoc", version = "0.2.0" }
authmacro = { path = "../authmacro", version = "0.2.0"}


anyhow = { version = "1.0", default-features = false }
lalrpop = "0.20.0"
