[package]
name = "authselect"
version = "0.2.0"
authors = ["jredrado <jesus.redrado@gmail.com>"]
edition = "2021"


[dependencies]


authcomp = { path = "../authcomp", version = "0.2.0"}
authdoc = { path = "../authdoc", version = "0.2.0"}
authparser = {path = "../authparser", version = "0.2.0"}

indextree = {git ="https://github.com/jredrado/indextree.git", branch="master", default-features=false, features=["std","deser"]}

minicbor = {git='https://github.com/jredrado/minicbor.git', branch="master", version="0.11.1", default-features = false, features = ["std","derive"]}

nanoserde = {version="0.1.29", git="https://github.com/jredrado/nanoserde.git",branch="master",features = ["std"]}


simplecss = { git = "https://github.com/jredrado/simplecss.git", branch="master", version="0.2.1"}

serde = { version = "1.0", features = ["derive","rc"] }

splitty = "0.1.0"
