[package]
name = "rsstreamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = "0.5.0-rc.2"

urlencoding = "2.1.2"

hex = { version = "0.4" }

corepack = "~0.4.0"

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

authselect = { path = "../../authselect", version = "0.1.0"}

wasmflow-sdk = { path="../../../../wasmflow-r10/crates/wasmflow/wasmflow-sdk" , features = ["v1"]}
wasmflow-rpc = { path="../../../../wasmflow-r10/crates/wasmflow/wasmflow-rpc" , features = ["client"]}
wasmflow-collection-cli = { path="../../../../wasmflow-r10/crates/wasmflow/wasmflow-collection-cli" }

[workspace]