[package]
name = "storage"
version = "0.0.0"
description = ""
authors = ["Jesús Redrado"]
edition = "2018"
license = "BSD-3-Clause"

[features]
default = ["host", "guest"]
host = []
guest = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
#wasmflow-sdk = { version = "0.10.0", features = ["v1"] }

wasmflow-sdk = { path="../../../../wasmflow-r10/crates/wasmflow/wasmflow-sdk" , features = ["v1"]}
wasmflow-rpc = { path="../../../../wasmflow-r10/crates/wasmflow/wasmflow-rpc" }
wasmflow-collection-cli = { path="../../../../wasmflow-r10/crates/wasmflow/wasmflow-collection-cli" }

chashmap = "2.2.2"

futures = "0.3"
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread"] }
once_cell = "1.8"
tokio-util = { version = "0.7", features = ["codec"] }
clap = { version = "3.0", features = ["derive", "env"] }
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]

[workspace]