[package]
name = "testjats"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

corepack = { version = "~0.4.0"}
serde = { version = "1.0", features = ["derive"] }

authcomp = { path = "../../authcomp", version = "0.1.0"}

authdoc = { path = "../../authdoc", version = "0.1.0"}
authparser = { path = "../../authparser", version = "0.1.0"}
authselect = { path = "../../authselect", version = "0.1.0"}

minicbor = {git='https://github.com/jredrado/minicbor.git', branch="master", version="0.11.1", default-features = false, features = ["alloc","derive"]}
nanoserde = {version="0.1.29", git="https://github.com/jredrado/nanoserde.git",branch="master"}

#polars = { version = "0.25.1", default-features = false, features=["csv-file","lazy","algo","lazy_regex","dtype-full","rank"]}

#serde-json-core = { version = "0.5.0", path="../../../../serde-json-core" }

serde_json_lenient = {version = "0.1.4", default-features = false, features=["alloc"]}

gluesql-core = { path = "../../../../gluesql/core", version = "0.13.1", default-features=false, features = [
#	"alter-table",
	"index",
	"transaction",
] }

rumdb-wasi = {git = 'https://github.com/jredrado/rumdb.git', branch="master", version="0.2.4"}

#rumdb-wasi = {path='/workspace/rumdb', version="0.2.3"}

async-trait = "0.1"
indexmap = { version = "1.8", features = ["serde"] }

#rs_merkle = { version = "1.2.0", default-features=false}

#merkle-log = "0.0.6"

merkle-rs = {version="0.0.1", git="https://github.com/shahn/merkle-rs.git", default-features=false, features=["use_serde"]}

sha2 = "0.7.0"

starling = {version="4.0.0", default-features=false, features=["json","sha3"]}

sled = {version="0.34.7",default-features=false}

[workspace]