[package]
name = "testmemory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

authcomp = { path = "../../authcomp", version = "0.1.0"}
epubcontract = { path = "../../epubcontract", version= "0.1.0" }

[workspace]

